--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,8 @@ img {
 }
 
 /*header*/
+
+
 .header {
     background-image: url(../img/banner.jpg);
     height: 60rem;
@@ -165,6 +167,7 @@ img {
     text-transform: uppercase;
     font-weight: 700;
     margin-bottom: 2rem;
+    border: none;
 }
 
 @media (min-width:768px) {
@@ -172,6 +175,10 @@ img {
         display: inline-block;
 
     }
+}
+
+.boton:hover {
+    cursor: pointer;
 }
 
 .boton--primario {
@@ -219,8 +226,6 @@ img {
         grid-template-columns: repeat(2, 1fr);
         column-gap: 2rem;
     }
-
-
 }
 
 .curso {
@@ -228,6 +233,68 @@ img {
     border-bottom: 1px solid var(--gris);
 }
 
+@media (min-width:768px) {
+    .curso {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        column-gap: 2rem;
+    }
+}
+
 .curso:last-of-type {
     border: none;
+}
+
+.curso {
+    border-bottom: 1px solid var(--gris);
+    margin-bottom: 2rem;
+}
+
+.curso_label {
+    font-family: var(--fuenteHeading);
+    font-weight: bold;
+}
+
+.curso_info {
+    font-weight: normal;
+}
+
+.curso_label,
+.curso_info {
+    font-size: 2rem;
+}
+
+/*contacto*/
+.contacto-bg {
+    background-image: url(../img/contacto.jpg);
+    height: 40rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.formulario {
+    background-color: var(--blanco);
+    margin: -5rem auto;
+    width: 90%;
+    padding: 3rem;
+}
+
+.campo {
+    display: flex;
+    margin-bottom: 2rem;
+}
+
+.campo_label {
+    flex: 0 0 9rem;
+    text-align: right;
+    padding-right: 2rem;
+}
+
+.campo_field {
+    flex: 1;
+    border: 1px solid var(--gris);
+}
+
+.campo_fiel--textarea {
+    height: 20rem;
 }
